# Crunchyroll-Downloader-Bot

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: release.yml
src/: config.rs  error.rs  i18n.rs  lib.rs  main.rs
src/crunchyroll/: auth.rs  client.rs  endpoints.rs  mod.rs  types.rs
src/database/: client.rs  mod.rs  models.rs
src/download/: dash.rs  manager.rs  mod.rs  progress.rs  segment.rs
src/drm/: decrypt.rs  mod.rs  widevine.rs
src/proxy/: mod.rs
src/telegram/: bot.rs  buzzheavier.rs  callbacks.rs  commands.rs  gofile.rs  keyboards.rs  mod.rs  pixeldrain.rs  upload.rs
src/tools/: downloader.rs  mod.rs
src/utils/: format.rs  messages.rs  mod.rs  process.rs  telegram.rs
